--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-nesttypeorm",
     "displayName": "Nest typeorm",
     "description": "Quickly scaffold nest typeorm templates",
-    "version": "1.2.0",
+    "version": "1.2.2",
     "icon": "images/icon.png",
     "publisher": "fuhidev",
     "author": {
@@ -125,7 +125,13 @@
                     "command": "extension.addNestTypeormEntity"
                 }
             ]
-        }
+        },
+        "snippets": [
+            {
+                "language": "typescript",
+                "path": "./snippets/snippets.json"
+            }
+        ]
     },
     "devDependencies": {
         "@types/chai": "^4.2.12",
